feat: 시리즈 엔티티 수정